Prevent a visible bar from appearing when rows are hovered
Make the bottom border of hovered rows transparent to hide the visual bar.

--- a/src/app/menu/tabla-menu/tabla-menu.component.css
+++ b/src/app/menu/tabla-menu/tabla-menu.component.css
@@ -54,6 +54,7 @@
   transform: scale(1.01);
   position: relative;
   z-index: 2;
+  border-bottom-color: transparent;
 }
 
 /* CELDAS */
